# KDT-PROJECT-PROJECT-2025

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  app.py  app_apple.py  app_backup.py  app_intelligent.py  app_map.py  app_new.py  app_simple.py  check_columns.py  check_encoding.py  config.py  create_readonly_user.sql  data_sites.txt  database_setup.sql  env.example  intelligent_search_service.py  intelligent_search_service_complete.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_map_app.py  setup_database.py  start_app.bat  test_etl.py  test_etl_simple.py  test_external_data_integration.py
TEST/: test_data_loader.py  test_sql_text2sql.py
commands/: init_mysql.py  load_csv_sales.py  load_pdfs.py
components/: apple_components.py  apple_kpi_dashboard.py  enhanced_report_ui.py  enhanced_report_ui_backup.py  enhanced_report_ui_simple.py  enhanced_search_ui.py  seoul_map_visualization.py
config/: evaluation_config.json
data/: README.md  database_manager.py  etl_service.py  rag_integration_service.py  sales.csv  schema.sql  schema_updated.sql
docs/: adr-001-clean-architecture.md  adr-002-tdd-implementation.md  adr-003-security-implementation.md  adr-004-performance-optimization.md  adr-005-logging-system.md  adr-006-error-handling.md  adr-007-streamlit-ui-guidelines.md  adr-008-prompt-versioning.md  adr-009-integration-testing.md  adr-010-deployment-strategy.md  map_visualization_guide.md  mysql-readonly-setup.md
infrastructure/: __init__.py  cache_service.py  config_service.py  decorators.py  error_handler.py  logging_service.py  pii_guard.py  prompt_guard.py
llm/: __init__.py  gemini_service.py  gemini_text_to_sql.py  sql_text2sql.py  text_to_sql.py
orchestration/: __init__.py  intent_router.py  query_orchestrator.py
pipelines/: __init__.py  etl.py  etl_csv_to_mysql.py  eval_suite.py  index_pdfs.py  rag.py  report_generator.py  text_to_sql.py
prompts/: __init__.py  report_generation_prompt.md  report_system_prompt.md  report_templates.md  text2sql_prompt.md  text_to_sql_prompt.md
retrieval/: __init__.py  external_data_service.py  hybrid_external_rag.py  pdf_processor.py  rag_hybrid.py  web_search.py
schema/: 0001_init.sql  0002_constraints.sql  0003_seed.sql
scripts/: run_evaluation.py  setup_basic_schema.py  setup_mysql_schema.py  test_full_system.py
styles/: apple_design.css  apple_style.css
tests/: test_data_layer_simple.py  test_env.py  test_error_handling.py  test_etl_pipeline.py  test_evaluation_suite.py  test_indices_explain.py  test_infrastructure.py  (+12 more)
(+39 files in other folders)
